--- a/sections/01-introduction.tex
+++ b/sections/01-introduction.tex
@@ -132,7 +132,7 @@ traction within academia and industry, including:
         languages, particularly in a functional programming context, include a
         comparison to Accelerate in their own benchmarks.\footnote{However, I
         modestly refrain from going so far as to claim that my work in this
-        thesis has set a new gold standard by which functional array-based
+        thesis has set a new standard by which functional array-based
         programming languages are measured.}
 
 \end{itemize}
