--- a/sections/05-optimisation.tex
+++ b/sections/05-optimisation.tex
@@ -9,10 +9,10 @@ The previous chapter discussed the architecture of the Accelerate language
 embedding and execution on CUDA hardware. Through a set of benchmarks, our
 previous work~\cite{Chakravarty:2011fr} identified the two most pressing
 performance limitations: operator fusion and data sharing. This chapter
-describes the methods used to overcome these issues, focusing primarily on the
-approach to operator fusion in the context of the stratified Accelerate language
-and skeleton-based implementation of the CUDA backend. This chapter expands upon
-the ideas that appeared in~\cite{McDonell:2013wi}.
+describes the methods used to overcome these issues, focusing primarily on my
+novel approach to operator fusion in the context of the stratified Accelerate
+language and skeleton-based implementation of the CUDA backend. This chapter
+expands upon the ideas that appeared in~\cite{McDonell:2013wi}.
 
 It should be noted that ``optimisation'' is a misnomer; only rarely does
 applying optimisations to a program result in object code whose performance is
@@ -2363,16 +2363,16 @@ operations. Because the shrinking step changes the structure of the AST by
 removing let bindings, which might be useful for the simplification analysis,%
 \footnote{In particular, before the introduction of an explicit value recursion
 term into the source language, uses encoded iteration by defining a single step
-of the loop body as a collective operation, and using Haskell to repeatedly
+of the loop body as a collective operation, and used Haskell to repeatedly
 apply it, effectively unrolling the loop a fixed number of times. Fusion would
 then combine these $n$ collective operations into a single operation containing
 $n$ instances of the loop body. However, it was found that the CUDA compiler was
-not well suited to compiling the manually unrolled loop C compilers don't
-compile C code, they compile \emph{idiomatic} C code. The loop recovery
+not well suited to compiling the manually unrolled loop. The loop recovery
 simplification (\S\ref{sec:loop_recovery}) was thus designed to convert the
 unrolled loop body back into an explicit iteration form, and in part this relied
-on the structure of let terms, which could be obfuscated by shrinking. Following
-the introduction of explicit iteration, loop recovery has since been disabled.}
+on the structure of let terms, which could be obfuscated by shrinking.}
+% Following the introduction of explicit iteration, loop recovery has been disabled.
+%
 we perform scalar simplifications before shrinking. Additionally, both the
 simplification and shrinking operations return a boolean indicating whether or
 not the operation made any changes to the AST. The scalar optimisation pipeline
